helps if you checkout the code

--- a/psmdb/Jenkinsfile
+++ b/psmdb/Jenkinsfile
@@ -13,6 +13,11 @@ pipeline {
     }
 
     stages {
+        stage('Checkout code') {
+            steps {
+                checkout scm
+            }
+        }
         stage('preamble') {
             steps {
                 script {
