helps if you checkout the code with an agent

--- a/psmdb/Jenkinsfile
+++ b/psmdb/Jenkinsfile
@@ -8,7 +8,7 @@ def templateName = 'flaskdemo'
 pipeline {
     agent {
         node {
-        label 'base'
+        label 'maven'
         }
     }
     options {
