--- a/psmdb/test-psmdb.yaml
+++ b/psmdb/test-psmdb.yaml
@@ -1,8 +1,7 @@
-piVersion: psmdb.percona.com/v1-4-0
+apiVersion: psmdb.percona.com/v1-4-0
 kind: PerconaServerMongoDB
 metadata:
   name: my-cluster-name
-  namespace: dbtest
 spec:
   image: 'percona/percona-server-mongodb-operator:1.4.0-mongod4.2'
   imagePullPolicy: Always
