trying to watch the mongodb deployment

--- a/psmdb/Jenkinsfile
+++ b/psmdb/Jenkinsfile
@@ -154,7 +154,8 @@ pipeline {
                 expression {
                     openshift.withCluster() {
                         openshift.withProject('flaskstaging') {
-                            return !openshift.selector( 'secret/my-cluster-name-secrets' ).exists()
+                            // return !openshift.selector( 'secret/my-cluster-name-secrets' ).exists()
+                            return !openshift.selector( 'PerconaServerMongoDB/my-cluster-name' ).exists()
                         }
                     }
                 }
@@ -164,11 +165,14 @@ pipeline {
                     openshift.withCluster() {
                         openshift.withProject('flaskstaging') {
                             openshift.create( readFile( 'psmdb/test-psmdb.yaml' ) )
-                            while( !openshift.selector("secret", "my-cluster-name-secrets").exists() ){
+                            openshift.selector( 'PerconaServerMongoDB/my-cluster-name' ).untilEach(1) {
+                                return (it.object().status.state == "ready")
+                            }
+                            // while( !openshift.selector("secret", "my-cluster-name-secrets").exists() ){
                                 // starting up a mongo cluster takes a little time
                                 // we need to ensure that the secret exists before continuing
-                                sleep(10)
-                            }
+                            //    sleep(10)
+                            // }
                         }
                     }
                 }
