--- a/psmdb/Jenkinsfile
+++ b/psmdb/Jenkinsfile
@@ -206,7 +206,7 @@ pipeline {
                                                     "containers":[
                                                         ["name":"flaskdemo-staging",
                                                          "resources":[:],
-                                                         "env":[[
+                                                         [ "env":[[
                                                             "name": "database-user",
                                                             "valueFrom": [
                                                                 "secretKeyRef": [
@@ -222,6 +222,7 @@ pipeline {
                                                                 ]    
                                                             ]]
                                                             ]
+                                                         ]
                                                         ]
                                                         ]
                                                     ]
