--- a/psmdb/Jenkinsfile
+++ b/psmdb/Jenkinsfile
@@ -206,14 +206,14 @@ pipeline {
                                                     "containers":[
                                                         ["name":"flaskdemo-staging",
                                                          "resources":[:],
-                                                         "env":[
+                                                         "env":[[
                                                             "name": "database-user",
                                                             "valueFrom": [
                                                                 "secretKeyRef": [
                                                                     "key": "MONGODB_CLUSTER_ADMIN_USER",
                                                                     "name": "tododb-secrets"
                                                                 ]
-                                                            ],[
+                                                            ]],[[
                                                             "name": "database-admin-password",
                                                             "valueFrom": [
                                                                 "secretKeyRef": [
@@ -221,7 +221,7 @@ pipeline {
                                                                     "name": "tododb-secrets"
                                                                 ]    
                                                             ]
-                                                            ]
+                                                            ]]
                                                          ]
                                                         ]
                                                     ]
